--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: sans-serif;
     line-height: 1.5;
 
-    background-color: #f9f9f9;
+    background-color: #89eb6b;
     color: #333333;
 
     width: 980px;
